# quarkdownloaderpro

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MainLayout.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  scroll-area.tsx  tabs.tsx
frontend/src/features/auth/: AuthModal.tsx
frontend/src/features/capacity/: CapacityStats.tsx
frontend/src/features/download/: DownloadManager.tsx
frontend/src/features/file-tree/: FileTree.tsx
frontend/src/features/help/: HelpView.tsx
frontend/src/features/share-parse/: ShareParser.tsx
frontend/src/services/: http.ts  quarkApi.ts
frontend/src/store/: useQuarkStore.ts
frontend/src/types/: quark.ts
frontend/src/utils/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  main.rs  quark_client.rs
workflows/: release.yml
